Fixed the bug where the modal will shift the layout 15px

--- a/app/assets/stylesheets/bootstrap/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap/bootstrap.css
@@ -523,10 +523,10 @@ dd {
   .dl-horizontal dd:after {
     content: " ";
     /* 1 */
-  
+
     display: table;
     /* 2 */
-  
+
   }
   .dl-horizontal dd:after {
     clear: both;
@@ -535,10 +535,10 @@ dd {
   .dl-horizontal dd:after {
     content: " ";
     /* 1 */
-  
+
     display: table;
     /* 2 */
-  
+
   }
   .dl-horizontal dd:after {
     clear: both;
@@ -5042,7 +5042,7 @@ button.close {
 body.modal-open,
 .modal-open .navbar-fixed-top,
 .modal-open .navbar-fixed-bottom {
-  margin-right: 15px;
+/*  margin-right: 15px;*/
 }
 .modal {
   display: none;
